--- a/section_Results_subsection_Maps_for__.tex
+++ b/section_Results_subsection_Maps_for__.tex
@@ -1,10 +1,13 @@
 \section{Results}
-\subsection{Maps for Argentina}
+
+
+\subsection{Argentinian maps}
+
 % Mapas
 % Hablar del gradiente
 \subsection{Zooming and detection of vulnerable communities}
+
 % Mapas
 % Histograma de porcentaje de vulnerabilidad por antena?
-% Cambios en los colores de los mapas (aclarar que el c{odigo de color cambia)
+% Cambios en los colores de los mapas (aclarar que el codigo de color cambia)
 % Deteccion de comunidades vulnerables
-
