--- a/section_Ongoing_work_The_CDR__.tex
+++ b/section_Ongoing_work_The_CDR__.tex
@@ -7,8 +7,8 @@ The CDR logs available for Argentina span for 5 months, precluding the predictio
     %\begin{equation}
     Y_u =
       \begin{cases}
-        &1 if H_u is from epidemic region
-        &0 else.
+        &1 \mbox{if} H_u \mbox{is from epidemic region}\\
+        &0 \mbox{else}.
       \end{cases}
     %\end{equation}
     \]
