--- a/section_Conclusions_and_future_work__.tex
+++ b/section_Conclusions_and_future_work__.tex
@@ -1,1 +1,12 @@
 \section{Conclusions and future work}
+
+Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk zone model correlating assuming a high influx of individuals from epidemic regions is correlate with higher infected
+
+FEATURE EXPLORATION. Hypothesis testing. 
+
+SEASONAL MIGRATIONS AND OTHER regions
+
+
+
+\section{Acknowledgements}
+Mundo Sano.
