--- a/section_Conclusions_and_future_work__.tex
+++ b/section_Conclusions_and_future_work__.tex
@@ -1,12 +1,23 @@
-\section{Conclusions and future work}
+\section{Conclusions}
+The results presented in this work show that it is possible to explore CDRs as a mean to tag human mobility. Combining social and geolocated information, the data at hand has been given a new innovative use different to the end for which the data was created (billing).
 
-Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk zone model correlating assuming a high influx of individuals from epidemic regions is correlate with higher infected
+Analysis of this type of data is of low cost, based on open-source tools and run on medium computing power (TENDRIA QUE HACER una referencia aca a una instancia de amazon con 8 cores y 64gb de ram para correr este analisis?). The potential value the results could add to health research is exposed
+ POTENCIALMENTE MUCHO VALOR
+
+The outcome of this work also stands as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
+
+
+\section{Future Work}
+Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points.
+
+TAG rural antennas.
 
 FEATURE EXPLORATION. Hypothesis testing. 
 
 SEASONAL MIGRATIONS AND OTHER regions
 
-
+Search for EPIDEMIOLOGICAL DATA at a finer grain. (such as specific infection cases, ) Differencing the epidemic region on specific infection cases rather than on
+Maybe even compare model with field results from NGOs partnered in this project.
 
 \section{Acknowledgements}
 Mundo Sano.
