--- a/section_Conclusions_The_results_presented__.tex
+++ b/section_Conclusions_The_results_presented__.tex
@@ -1,11 +1,15 @@
 \section{Conclusions}
+
+The heatmaps expose a 'temperature' descent from the core regions outwards. The heat is concentrated in the ecoregion and gradually descends as we move further away. This expected behavior could be explained by the fact that calls are in general of a local nature and limited to 3 or 4 antennas used per user. 
+
+A more surprising event is the finding of communities atypical to their neighbouring region. They stand out for their strong communication ties with the studied region, showing significantly higher links of vulnerable communication. The detection of these antennas through the visualizations is of great value to health campaign managers. Tools that target specific areas help to prioritize resources and calls to action more effectively.
+
 The results presented in this work show that it is possible to explore CDRs as a mean to tag human mobility. Combining social and geolocated information, the data at hand has been given a new innovative use different to the end for which the data was created (billing).
 
 Analysis of this type of data is of low cost, based on open-source tools and run on medium computing power (TENDRIA QUE HACER una referencia aca a una instancia de amazon con 8 cores y 64gb de ram para correr este analisis?). The potential value the results could add to health research is exposed
  POTENCIALMENTE MUCHO VALOR
 
-The outcome of this work also stands as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
-
+Finally, the outcome of this work stands as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
 
 \section{Future Work}
 Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points.
