--- a/pooo_section_Introduction_Chagas_disease__.tex
+++ b/pooo_section_Introduction_Chagas_disease__.tex
@@ -1,4 +1,4 @@
-pooo\section{Introduction}
+\section{Introduction}
 
 Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO \ref{http://www.who.int/mediacentre/factsheets/fs340/en/}) estimates more than six million infected people worldwide. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in Europe. 
 
