--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -4,17 +4,7 @@ Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly 
 
 Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The disease may last asymptomatically, reaching up to 10 years in the infected individual without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
-In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure.The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas. The ecoregion as of today is hyperendemic for the disease.
+In this paper we discuss the use of CDRs for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in Latin America. We intend to predict population movements between different regions, providing a proxy for the epidemic spread. The objective is to show that these types of logs are rich in social and individual information to determine whether an individual has lived in an epidemic area. An argentinian and a mexican case study are presented using data provided by telecommunication companies (TelCo) from each country. A discussion of how mobile data was processed is included. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accessible to researchers. 
 
-The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or  transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
-
-Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governamental programs have been ongoing for years now \ref{plan_naciona_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
-
-There exist different approaches in the literature making use of mobile data applied epidemiological or health problems.\begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} Amy Wesolowski et al \ref{Wesolowski}  quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information; Tizzoni et al \ref{Tizzoni} compare different mobility modelling using theoretical approaches, available census data and models based on CDRs interactions to infer movements and compare all models studied with CDRs and mobility census data to infer
-
-Other works directly study CDRs to characterize human mobility and other sociodemographic information. \footnote{A complete survey of mobile traffic analysis articles may be found in Fiore, Naboulsi, Ribot & Stanica's work} Antenna usage is mostly explored in Sarraute et al. \ref{mobile_survey} to automatically detect large social-events in real time. Using the social graph to 
-
-
-Here we explore the use CDRs to predict population movements between the \textit{Gran Chaco} ecoregion to the rest of the country, thus providing a proxy for the epidemic spread. Characterization of human movements to and from the ecoregion is key to the problem of targeting infected individuals at a national scale. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accessible to researchers. 
 
 1
