--- a/The_dynamic_interaction_of_the__1.tex
+++ b/The_dynamic_interaction_of_the__1.tex
@@ -1,4 +1,4 @@
-The dynamic interaction of the triatomine infested areas and the human mobility patterns present a difficult scenario to track down individuals or spots with high prevalence of infected people or  transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
+The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
 
 Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts \begin{comment}  aca como referencio a Diego Weinberg y Mundo Sano? \end{comment} underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governamental programs have been ongoing for years now \ref{plan_naciona_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
