--- a/section_Conclusions_The_heatmaps_expose__.tex
+++ b/section_Conclusions_The_heatmaps_expose__.tex
@@ -6,10 +6,9 @@ A more surprising event is the finding of communities atypical to their neighbou
 
 The results presented in this work show that it is possible to explore CDRs as a mean to tag human mobility. Combining social and geolocated information, the data at hand has been given a new innovative use different to the end for which the data was created (billing).
 
-Analysis of this type of data is of low cost, based on open-source tools and run on medium computing power (TENDRIA QUE HACER una referencia aca a una instancia de amazon con 8 cores y 64gb de ram para correr este analisis?). The potential value the results could add to health research is exposed
- POTENCIALMENTE MUCHO VALOR
+Epidemic counter-measures nowadays include setting national surveillance systems, vector-centered policy interventions and individual screenings of people. These measures require costly infrastructures to set up and be run. However, systems built on top of existing mobile networks would demand lower costs, taking advantage of the already available infrastructure. The potential value these results could add to health research is hereby exposed.
 
-Finally, the outcome of this work stands as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
+Finally, the results stand as a proof of concept which can be extended to other countries or to diseases with similar characteristics.
 
 \section{Future Work}
 Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points.
