--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -4,7 +4,7 @@ Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly 
 
 Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The disease may last asymptomatically, reaching up to 10 years in the infected individual without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
-In this paper we discuss the use of CDRs for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in Latin America. We intend to predict population movements between different regions, providing a proxy for the epidemic spread. The objective is to show that these types of logs are rich in social and individual information to determine whether an individual has lived in an epidemic area. An argentinian and a mexican case study are presented using data provided by telecommunication companies (TelCo) from each country. A discussion of how mobile data was processed is included. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accessible to researchers. 
+Working under the auspices of the \textit{Mundo Sano} Foundation who provided key health expertise on the subject, in this work we discuss the use of CDRs for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in Latin America. We intend to predict population movements between different regions, providing a proxy for the epidemic spread. The objective is to show that these types of logs are rich in social and individual information to determine whether an individual has lived in an epidemic area. An argentinian and a mexican case study are presented using data provided by telecommunication companies (TelCo) from each country. A discussion of how mobile data was processed is included. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accessible to researchers. 
 
 
 1
