--- a/section_Conclusions_The_heatmaps_expose__.tex
+++ b/section_Conclusions_The_heatmaps_expose__.tex
@@ -23,4 +23,4 @@ Search for EPIDEMIOLOGICAL DATA at a finer grain. (such as specific infection ca
 Maybe even compare model with field results from NGOs partnered in this project.
 
 \section{Acknowledgements}
-Mundo Sano.
+Mundo Sano. Diego, Marcelo, Marcelo2
