--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -8,19 +8,18 @@
 \section{Procedure}
 \subsection{Home detection}
 
-The first step of the process involves determining the to determine the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can at most match each user $u$ with its \textit{home antenna} $H_u$.
+    The first step of the process involves determining the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can at most match each user $u$ with its \textit{home antenna} $H_u$.
 
-To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights. This, according to our categorization of types of days of the week, corresponds to Monday to Thursday nights, from 8pm to 6am of the following day.
-    % Speak about the min number of calls needed to say that we can know the home.
+    To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights. This, according to our categorization of types of days of the week, corresponds to Monday to Thursday nights, from 8pm to 6am of the following day. This was based on the assumption that on any given day, users will be located at home during night time.
     
     Note that users for which the inferred home antenna is located in \textit{Gran Chaco} (the risk area) will be considered the set of \textit{residents of Gran Chaco}.
 
 \subsection{Detection of vulnerable users}
-    Given the set of inhabitants of the risk area, we want to find those with a high communication with the residents of the endemic zone.
+    Given the set of inhabitants of the risk area, we want to find those with a high communication with residents of the endemic zone.
     
-    We get the list of calls for each user, and, using this data, we determine the set of neighbors in the social graph. Then, we tag the neighbors of any resident of the endemic zone as potentially vulnerable. We also tag the calls to (from) a certain antenna from (to) residents of the endemic area as \textit{vulnerable calls}.
+    To do this, we get the list of calls for each user and then determine the set of neighbors in the social graph. For each resident of the endemic zone, we tag all his neighbors as potentially vulnerable. We also tag the calls to (from) a certain antenna from (to) residents of the endemic area as \textit{vulnerable calls}.
     
-    The next step is to aggregate this data for each antenna. This means that, for each antenna, we have:
+    The next step is to aggregate this data for every antenna. Given an antenna, we will have:
     \begin{itemize}
         \item The total number of residents (this is, the number of people for which that is their home antenna).
         \item The total number of residents which are vulnerable.
@@ -32,21 +31,21 @@ To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the ti
 
 % Reviewed up to here
 \subsection{Heatmap generation}
-    With the collected data, we generated heatmaps to visualize the mentioned indicators for each antenna. We overlap these heatmaps with regular political maps of the region.
+    With the collected data, we generated heatmaps to visualize the mentioned antenna indicators, overlapping these heatmaps with political maps of the region taken for study.
     
-	We generate a circle for each cell, where:
+	A circle is generated for each cell, where:
 	%Generamos un c\'irculo por cada celda donde:
 	\begin{itemize}
-		\item the \textbf{area} depends on the on the population of the antenna's area.
+		\item the \textbf{area} depends on the population living in the antenna.
 		%el \textbf{\'area} depende de la cantidad de usuarios (habitantes),
-		\item the \textbf{color}, to the percentage of vulnerable users living there.
+		\item the \textbf{color}, is related to the percentage of vulnerable users living there.
 		%el \textbf{color} corresponde al porcentaje de usuarios vulnerables que viven en esa antena.
 	\end{itemize}
     
-    We built two filtering parameters to control which antennas are plotted.
+    We used two filtering parameters to control which antennas are plotted.
     \begin{itemize}
         \item $\beta$: The antenna is plotted if its percentage of vulnerable users is higher than $\beta$.
         \item $min\_volumen$: The antenna is plotted if its population is bigger than $min\_volumen$.
     \end{itemize}
     
-    These parameters had to be tuned differently when zooming in particular regions. For example: an antenna whose percentage would be considered low taking the whole country can be locally high when zooming in a particular area that is further away from the endemic zone.
+    These parameters had to be tuned differently for different regions. For example: an antenna whose vulnerable percentage would be considered low at the national level can be locally high when zooming in at a more regional level.
