--- a/section_Results_subsection_Argentinian_maps__.tex
+++ b/section_Results_subsection_Argentinian_maps__.tex
@@ -1,8 +1,8 @@
 \section{Results}
 
-
 \subsection{Argentinian maps}
-
+As a first glance, maps were drawn using a provincial or national scale.
+Next, and on the advise of the Foundation's experts, we focused on areas of specific epidemic interest.
 % Mapas
 % Hablar del gradiente
 \subsection{Zooming and detection of vulnerable communities}
