--- a/section_Ongoing_work_The_CDR__1.tex
+++ b/section_Ongoing_work_The_CDR__1.tex
@@ -15,9 +15,7 @@ The CDR logs available for Argentina span for 5 months, precluding the predictio
 
 ATTRIBUTES extracted from 
 
-USED algorithms 
-
-PARTIAL results
+USED algorithms {Random Forests, Gradient Boosting, Multinomial Naive Bayes (Benchmark), Logistic Regression}
 
 
 \subsection{Maps for Mexico}
