--- a/subsection_Zooming_and_detection_of__1.tex
+++ b/subsection_Zooming_and_detection_of__1.tex
@@ -1,7 +1,1 @@
-\subsection{Zooming and detection of vulnerable communities}
-
-
-% Mapas
-% Histograma de porcentaje de vulnerabilidad por antena?
-% Cambios en los colores de los mapas (aclarar que el codigo de color cambia)
-% Deteccion de comunidades vulnerables
+This analysis allowed us to specifically detect outlying communities in the focused regions. Some of these can be seen directly from the previous heatmaps, where the towns of Avellaneda, San Isidro and Parque Patricios have been pinpointed.
