--- a/section_Ongoing_work_The_CDR__1.tex
+++ b/section_Ongoing_work_The_CDR__1.tex
@@ -20,4 +20,4 @@ USED algorithms {Random Forests, Gradient Boosting, Multinomial Naive Bayes (Ben
 
 \subsection{Maps for Mexico}
 
-EJEMPLOS DE MAPAS
+EJEMPLOS DE MAPAS??
