--- a/section_Future_Work_Lines_for__.tex
+++ b/section_Future_Work_Lines_for__.tex
@@ -1,14 +1,14 @@
 \section{Future Work}
 Lines for future work:
 \begin{itemize}
-    \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the addition of external information).
+    \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the aid of external information).
     \item Analyze seasonal migrations: many seasonal workers might leave the endemic area for several months while still carrying the disease. Aanlyzing these migrations can give information on which communities have a high influx of people from the endemic zone.
     \item Add more regions to the study.
     \item Feature exploration, to search for correlations with being infected.
     \item Search for epidemiological data at a finer grain, such as specific infection cases. Splitting the endemic region according to the infection rate in different areas, or considering particular infections. %revisar
 Maybe even compare model with field results from NGOs partnered in this project.
     \item Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points. % revisar
-
+\end{itemize}
 
 \section{Acknowledgements}
 Mundo Sano. Diego, Marcelo, Marcelo2
