--- a/section_Future_Work_Lines_for__.tex
+++ b/section_Future_Work_Lines_for__.tex
@@ -1,7 +1,7 @@
 \section{Future Work}
 Lines for future work:
 \begin{itemize}
-    \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the aid of external information).
+    \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the addition of external information).
     \item Analyze seasonal migrations: many seasonal workers might leave the endemic area for several months while still carrying the disease. Aanlyzing these migrations can give information on which communities have a high influx of people from the endemic zone.
     \item Add more regions to the study.
     \item Feature exploration, to search for correlations with being infected.
