--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,9 +1,13 @@
 
-@inproceedings{sarraute2015socialevents,
-  title={Social Events in a Time-Varying Mobile Phone Graph},
-  author={Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
-  booktitle={Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
-  year={2015}
+@article{schmunis2010chagas,
+  title={Chagas disease: a Latin American health problem becoming a world health problem},
+  author={Schmunis, Gabriel A and Yadon, Zaida E},
+  journal={Acta tropica},
+  volume={115},
+  number={1},
+  pages={14--21},
+  year={2010},
+  publisher={Elsevier}
 }
 
 
