--- a/section_Introduction_The_Chagas_disease__.tex
+++ b/section_Introduction_The_Chagas_disease__.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-The Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across Latin America. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the Americas via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in Europe. 
+The Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin America countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the endemic regions in America via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American inmigrants such as Spain and the United States~\cite{schmunis2010chagas}, converting it into a world health problem.
 
 Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \ref{trabajos_de_}.\begin{comment}  en el drive estan las ppt del min salud \end{comment}. The disease may last asymptomatically up to 10 years in the infected individual without being detected. This characteristic vastly reduces the chance of effective treatment and the tracking of infected individuals. Also, the spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups and slowly introduces the disease to the general population. In this process, long-term human mobility plays a key role.
 
