--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,4 +1,22 @@
 
+@article{briceno2009chagas,
+  title={Chagas disease in the Americas: an ecohealth perspective},
+  author={Brice{\~n}o-Le{\'o}n, Roberto},
+  journal={Cadernos de Sa{\'u}de P{\'u}blica},
+  volume={25},
+  pages={S71--S82},
+  year={2009},
+  publisher={SciELO Brasil}
+}
+
+
+@inproceedings{sarraute2015socialevents,
+  title={Social Events in a Time-Varying Mobile Phone Graph},
+  author={Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
+  booktitle={Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
+  year={2015}
+}
+
 @article{schmunis2010chagas,
   title={Chagas disease: a Latin American health problem becoming a world health problem},
   author={Schmunis, Gabriel A and Yadon, Zaida E},
@@ -13,8 +31,8 @@
 
 @article{who2016,
   title={Chagas disease (American trypanosomiasis)},
-  author={World Health Organization},
-  journal={{WHO} Fact sheets},
+  author={WHO},
+  journal={{World Health Organization} Fact sheets},
   year={2016},
   url={http://www.who.int/mediacentre/factsheets/fs340/en/},
   urldate={2016-05-09}
