--- a/section_Introduction_The_Chagas_disease__.tex
+++ b/section_Introduction_The_Chagas_disease__.tex
@@ -7,5 +7,4 @@ Relevant routes of transmission also include blood transfusion and congenital tr
 % \begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
 
-
-Working under the auspices of the \textit{Mundo Sano} Foundation who provided key health expertise on the subject, in this work we discuss the use of CDRs for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in Latin America. We intend to predict population movements between different regions, providing a proxy for the epidemic spread. The objective is to show that these types of logs are rich in social and individual information to determine whether an individual has lived in an epidemic area. An argentinian and a mexican case study are presented using data provided by telecommunication companies (TelCo) from each country. A discussion of how mobile data was processed is included. To the best of our knowledge, data on the subject is vastly lacking, inexistent or hardly accessible to researchers. 
+Working in collaboration with the \textit{Mundo Sano} Foundation, who provided key health expertise on the subject, in this work we discuss the use of Call Detail Records (CDRs) for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin America countries. We generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. A discussion of how mobile data was processed is included. 
