--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -29,6 +29,17 @@
 }
 
 
+@article{wesolowski2012quantifying,
+  title={Quantifying the impact of human mobility on malaria},
+  author={Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
+  journal={Science},
+  volume={338},
+  number={6104},
+  pages={267--270},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{who2016,
   title={Chagas disease (American trypanosomiasis)},
   author={WHO},
