--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -10,6 +10,31 @@
 }
 
 
+@article{chunara2013large,
+  title={Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire},
+  author={Chunara, R and Nsoesie, EO},
+  journal={NetMob D4D Challenge},
+  pages={1--18},
+  year={2013}
+}
+
+
+@article{enns2013human,
+  title={Human Mobility and Communication Patterns in Cote d’Ivoire: A Network Perspective for Malaria Control},
+  author={Enns, E and Amuasi, J},
+  journal={NetMob D4D Challenge},
+  pages={1--14},
+  year={2013}
+}
+
+
+@phdthesis{naboulsi2015mobile,
+  title={Mobile traffic analysis: a survey},
+  author={Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
+  year={2015},
+  school={Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT}
+}
+
 @inproceedings{sarraute2015socialevents,
   title={Social Events in a Time-Varying Mobile Phone Graph},
   author={Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
@@ -27,7 +52,6 @@
   year={2010},
   publisher={Elsevier}
 }
-
 
 @article{wesolowski2012quantifying,
   title={Quantifying the impact of human mobility on malaria},
