--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -53,6 +53,17 @@
   publisher={Elsevier}
 }
 
+@article{tizzoni2014use,
+  title={On the use of human mobility proxies for modeling epidemics},
+  author={Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
+  journal={PLoS Comput Biol},
+  volume={10},
+  number={7},
+  pages={e1003716},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
 @article{wesolowski2012quantifying,
   title={Quantifying the impact of human mobility on malaria},
   author={Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
