--- a/section_Introduction_The_Chagas_disease__.tex
+++ b/section_Introduction_The_Chagas_disease__.tex
@@ -3,7 +3,7 @@
 The Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin America countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the endemic regions in America via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family. In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American inmigrants such as Spain and the United States~\cite{schmunis2010chagas}, converting it into a world health problem.
 
 The disease may last asymptomatically up to 10 years in the infected individual without being detected. This characteristic vastly difficults the effective detection and treatment of infected individuals. In this process, long-term human mobility plays a key role. In particular, seasonal and permanent rural-urban migration has played a major role in remobilizing Chagas-infected individuals \cite{briceno2009chagas}. 
-Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 1300 newborns infected each year \cite{trabajos_de_}.
+Relevant routes of transmission also include blood transfusion and congenital transmission, estimating more than fourteen thousand newborns infected each year \cite{OPS2006chagas} in Latin America.
 % \begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
 
