--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -9,6 +9,16 @@
   publisher={SciELO Brasil}
 }
 
+@article{OPS2006chagas,
+  title={Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas},
+  author={Organizacion Panamericana de la Salud},
+  journal={OP5/HDM/CD},
+  volume={425-06},
+  pages={1--6},
+  year={2006},
+  publisher={OPS}
+}
+
 
 @article{chunara2013large,
   title={Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire},
