--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,8 +11,8 @@
 
 @article{OPS2006chagas,
   title={Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas},
-  author={Organizacion Panamericana de la Salud},
-  journal={OP5/HDM/CD},
+  author={OPS},
+  journal={Organizacion Panamericana de la Salud/HDM/CD},
   volume={425-06},
   pages={1--6},
   year={2006},
