--- a/subsection_Zooming_and_detection_of__.tex
+++ b/subsection_Zooming_and_detection_of__.tex
@@ -3,7 +3,9 @@
 % Histograma de porcentaje de vulnerabilidad por antena?
 % Cambios en los colores de los mapas (aclarar que el codigo de color cambia)
 
-From the first maps, we decided to focus visualizations in areas whose results were unexpected to the epidemiological collaborators. These antennas stand out for having a significantly higher link to the epidemic area than their adjacent antennas. The idea was to enhance the visualization focus in areas outside of Gran Chaco which could possibly host communities of migrants from the ecoregion.
+As a result of inspecting the first maps, we decided to focus visualizations in areas whose results were unexpected to the epidemiological experts. In some cases, antennas stood out for having a significantly higher link to the epidemic area than their adjacent antennas. The idea was to enhance the visualization in areas outside of Gran Chaco looking for possible host communities of migrants from the ecoregion.
+
+High risk antennas were separately listed and manually located in political maps. This information was made available to the Foundation collaborators who used it as an aid for their campaign planning and as education for community health workers. 
 
 Focused areas included the provinces of Tierra del Fuego, Chubut, Santa Cruz and Buenos Aires, with special focus on the metropolitan area of Greater Buenos Aires whose heatmaps are shown below.
 
