--- a/section_Ongoing_work_The_CDR__1.tex
+++ b/section_Ongoing_work_The_CDR__1.tex
@@ -24,7 +24,7 @@ The model's first version consists of the following features:
     \item Mobility diameter: The user's logged antennas define a convex hull in space and the radius of the hull is taken to be as the mobility diameter. This length is representative of the area of influence of that individual. We are expecting that these feature be correlated with long-term migrations.
     \item Neighbours: From the social graph built from the CDRs we extracted the total count of neighbours in the communicaction graph and the total count of epidemic neighbors. 
     \item Calls: The total time and count of calls made during the five month period is aggregated per user. This information is also segmented according to the hour of the day that the calls were made and whether they were made during the weekends. Special care was taken with calls placed to and from vulnerable users and aggregated accordingly.
-\end{itemiize}
+\end{itemize}
 
 \subsection{Supervised Algorithms}
 Based on 
