--- a/section_Ongoing_work_The_CDR__1.tex
+++ b/section_Ongoing_work_The_CDR__1.tex
@@ -1,6 +1,8 @@
 \section{Ongoing work}
 
-The CDR logs available for Argentina span for 5 months, precluding the prediction of long-term mobilities using supervised algorithms. For the mexican dataset, users living in the ecoregion can be tested to their area of influence, looking back one year. Taking the period from January '14 to April '15 our target variable $Y $ is defined in the following way for every user $u$: 
+The CDR logs available for Argentina span for 5 months, precluding the prediction of long-term mobilities using supervised algorithms. For the mexican dataset, users living in the ecoregion can be tested to their area of influence, looking back one year. The results from this work could then be applied, assuming similar mobility patterns, to the prediction of past migrations in the argentinian dataset.
+
+Taking the period from January '14 to April '15 our target variable $Y $ is defined in the following way for every user $u$: 
 
 % \eqref{PP1} reduces to
 \[
@@ -31,7 +33,7 @@ The model's first version consists of the following features:
 
 Classification algorithms for this first iteration are based on the most common techniques found in the literature for this task. Random forests, Gradient Boosting and Logistic Regression are standard for this kind of jobs. For the purpose of fast benchmarking Multinomial Naive Bayes is also tested since it is a very fast non-parametric method. 
 
-Where possible, feature importance methods will be used to quantify the contribution of the feature or the interaction of features to the mobility of the users.  
+Where possible, feature importance methods will be used to quantify the contribution of the feature or the interaction of features to the mobility of the users.
 
 \subsection{Maps for Mexico}
 MOSTRAR MAPAS O NO??
