--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -9,15 +9,6 @@
   publisher={SciELO Brasil}
 }
 
-@article{OPS2006chagas,
-  title={Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas},
-  author={OPS},
-  journal={Organizacion Panamericana de la Salud/HDM/CD},
-  volume={425-06},
-  pages={1--6},
-  year={2006},
-  publisher={OPS}
-}
 
 
 @article{chunara2013large,
@@ -43,6 +34,27 @@
   author={Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
   year={2015},
   school={Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT}
+}
+
+@article{OPS2006chagas,
+  title={Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas},
+  author={OPS},
+  journal={Organizacion Panamericana de la Salud/HDM/CD},
+  volume={425-06},
+  pages={1--6},
+  year={2006},
+  publisher={OPS}
+}
+
+@article{rassi2012american,
+  title={American trypanosomiasis (Chagas disease)},
+  author={Rassi, Anis and de Rezende, Joffre Marcondes},
+  journal={Infectious disease clinics of North America},
+  volume={26},
+  number={2},
+  pages={275--291},
+  year={2012},
+  publisher={Elsevier}
 }
 
 @inproceedings{sarraute2015socialevents,
